// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a game card in dark mode 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a hovered game card in dark mode 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Data Processing filters out games with zero playtime 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Data Processing renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Edge Cases handles single game scenario 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          757.4h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          757.4h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when games is null 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-et6zal"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when games is undefined 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-et6zal"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Empty States renders empty state when no games provided 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-et6zal"
    >
      <p
        class="css-13s56l1"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a game card in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a hovered game card in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Loading State renders loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-1g612vj"
    >
      <div
        class="css-3wu3l6"
      />
      <p
        class="css-gej412"
      >
        Loading Gaming Library...
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Theme Integration adapts to dark mode styling 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayTimeChart Theme Integration renders correctly in light mode 1`] = `
<DocumentFragment>
  <div
    class="css-lnnjou"
  >
    <div
      class="css-munl51"
    >
      <button
        aria-label="View Cities: Skylines on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="Cities: Skylines header"
            class="css-ac7c24"
            src="https://example.com/cities-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            1
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              Cities: Skylines
            </div>
            <div
              class="css-bcsjsw"
            >
              757.35h total • 2h recently
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View ARK: Survival Evolved on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="ARK: Survival Evolved header"
            class="css-ac7c24"
            src="https://example.com/ark-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            2
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-bcsjsw"
            >
              277.83h total
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View PUBG: BATTLEGROUNDS on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-2w7wic"
        >
          <img
            alt="PUBG: BATTLEGROUNDS header"
            class="css-ac7c24"
            src="https://example.com/pubg-header.jpg"
          />
          <div
            class="css-18c3nn9"
          >
            3
          </div>
          <div
            class="steam-game-card_caption css-18i3ee5"
          >
            <div
              class="css-jae09u"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-bcsjsw"
            >
              200h total • 1h recently
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1jvjqv3"
    >
      <div
        class="css-12f4tqr"
      >
        Total Hours: 
        <span
          class="css-13epqkc"
        >
          1235.2h
        </span>
      </div>
      <div
        class="css-12f4tqr"
      >
        Average: 
        <span
          class="css-13epqkc"
        >
          411.7h per game
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
